<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/menu_monitor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_monitor" />

    <TextView
        android:id="@+id/menu_flights"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_flights" />

    <TextView
        android:id="@+id/menu_news"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_news" />

    <TextView
        android:id="@+id/menu_alerts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_alerts" />

    <TextView
        android:id="@+id/menu_hotspots"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_hotspots" />

</LinearLayout>